--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build wheels in Manylinux Docker Container
         run: |
-          docker run --rm -v ${{ github.workspace }}:/io ghcr.io/pyo3/maturin build --release --manifest-path /io/ascvd/Cargo.toml -i python3.10 --out /io/ascvd/dist --manylinux off
+          docker run --rm -v ${{ github.workspace }}:/io ghcr.io/pyo3/maturin build --release --manifest-path /io/Cargo.toml -i python3.10 --out io/dist --manylinux off
         env:
           SCCACHE: 'true'
 
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: wheels
-          path: ./ascvd/dist
+          path: ./dist
 
   windows:
     runs-on: windows-latest
@@ -59,7 +59,6 @@ jobs:
 
       - name: Build wheels
         run: |
-          cd ./ascvd
           maturin build --release --out dist --find-interpreter
         env:
           SCCACHE: 'true'
@@ -68,7 +67,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: wheels
-          path: ./ascvd/dist
+          path: ./dist
 
   macos:
     runs-on: macos-latest
@@ -87,7 +86,6 @@ jobs:
 
       - name: Build wheels
         run: |
-          cd ./ascvd
           maturin build --release --out dist --find-interpreter
         env:
           SCCACHE: 'true'
@@ -96,7 +94,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: wheels
-          path: ./ascvd/dist
+          path: ./dist
 
   sdist:
     runs-on: ubuntu-latest
@@ -108,14 +106,13 @@ jobs:
 
       - name: Build sdist
         run: |
-          cd ./ascvd
           maturin sdist --out dist
           
       - name: Upload sdist
         uses: actions/upload-artifact@v3
         with:
           name: sdist
-          path: ./ascvd/dist
+          path: ./dist
 
 
   release:
