--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -154,13 +154,12 @@ jobs:
           asset_name: ascvd_sdist.tar.gz
           asset_content_type: application/gzip
 
-  publish:
-    needs: release
+  publish-to-pypi:
+    needs: [linux, windows, macos, sdist]  # Ensure these are your build jobs
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')  # Only run this job for tagged commits
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -170,13 +169,61 @@ jobs:
       - name: Install twine
         run: pip install twine
 
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
+      - name: Download wheels and sdist
+        uses: actions/download-artifact@v4
         with:
           path: dist
 
-      - name: Publish distribution 📦 to PyPI
+      - name: Publish to PyPI
         run: twine upload dist/*
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+
+
+  publish-to-github:
+    needs: [linux, windows, macos, sdist] # Update this based on your existing jobs
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
+
+      - name: Download wheels and sdist
+        uses: actions/download-artifact@v4
+        with:
+          path: dist
+
+      - name: Get version from your version file
+        id: version
+        # Update the working-directory and command to extract version from your project's version file
+        run: |
+          # Example for extracting version from a Python file
+          VERSION=$(python setup.py --version)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Create GitHub release
+        id: github-release
+        uses: release-drafter/release-drafter@v5
+        with:
+          # Update these details according to your project
+          name: Your Project ${{ steps.version.outputs.version }}
+          tag: v${{ steps.version.outputs.version }}
+          version: ${{ steps.version.outputs.version }}
+          commitish: ${{ github.sha }}
+          disable-autolabeler: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload assets to GitHub release
+        run: gh release upload $TAG $FILES --clobber
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG: ${{ steps.github-release.outputs.tag_name }}
+          FILES: dist/*
+
+      - name: Publish GitHub release
+        run: gh release edit $TAG --draft=false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG: ${{ steps.github-release.outputs.tag_name }}
