--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -116,7 +116,7 @@ jobs:
   release:
     needs: [linux, windows, macos, sdist]
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    if: github.event.pull_request.merged == true || github.ref == 'refs/heads/main'
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@v3
@@ -157,7 +157,7 @@ jobs:
   publish-to-pypi:
     needs: [linux, windows, macos, sdist]  # Ensure these are your build jobs
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')  # Only run this job for tagged commits
+    if: github.event.pull_request.merged == true || github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
 
