--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,25 +21,21 @@ jobs:
         target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
     steps:
       - uses: actions/checkout@v3
-
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
-      - name: Install maturin
-        run: pip install maturin
-
-      - name: Build wheels in Manylinux Docker Container
-        run: |
-          docker run --rm -v ${{ github.workspace }}:/io ghcr.io/pyo3/maturin build --release --manifest-path /io/Cargo.toml -i python3.10 --out io/dist --manylinux off
-        env:
-          SCCACHE: 'true'
-
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
+          manylinux: auto
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
-          name: wheels-linux
-          path: ./io/dist
+          name: wheels
+          path: dist
 
   windows:
     runs-on: windows-latest
@@ -48,26 +44,21 @@ jobs:
         target: [x64, x86]
     steps:
       - uses: actions/checkout@v3
-
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
           architecture: ${{ matrix.target }}
-
-      - name: Install maturin
-        run: pip install maturin
-
       - name: Build wheels
-        run: |
-          maturin build --release --out dist --find-interpreter
-        env:
-          SCCACHE: 'true'
-
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
-          name: wheels-windows
-          path: ./dist
+          name: wheels
+          path: dist
 
   macos:
     runs-on: macos-latest
@@ -76,182 +67,49 @@ jobs:
         target: [x86_64, aarch64]
     steps:
       - uses: actions/checkout@v3
-
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
-      - name: Install maturin
-        run: pip install maturin
-
       - name: Build wheels
-        run: |
-          maturin build --release --out dist --find-interpreter
-        env:
-          SCCACHE: 'true'
-
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
-          name: wheels-macos
-          path: ./dist
+          name: wheels
+          path: dist
 
   sdist:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Install maturin
-        run: pip install maturin
-
       - name: Build sdist
-        run: |
-          maturin sdist --out dist
-          
+        uses: PyO3/maturin-action@v1
+        with:
+          command: sdist
+          args: --out dist
       - name: Upload sdist
         uses: actions/upload-artifact@v3
         with:
-          name: sdist
-          path: ./dist
+          name: wheels
+          path: dist
+
   release:
+    name: Release
+    runs-on: ubuntu-latest
+    if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, windows, macos, sdist]
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true || github.ref == 'refs/heads/main'
     steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: ./dist
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Wheels to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/wheels
-          asset_name: ascvd_wheels.zip
-          asset_content_type: application/zip
-          
-      - name: Upload sdist to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/sdist
-          asset_name: ascvd_sdist.tar.gz
-          asset_content_type: application/gzip
-
-  publish-to-pypi:
-    needs: [linux, windows, macos, sdist]  # Ensure these are your build jobs
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true || github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install twine
-        run: pip install twine
-
-      # Download steps for each platform
-      - name: Download Linux wheels
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-linux
-          path: ./dist/wheels-linux
-  
-      - name: Download Windows wheels
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-windows
-          path: ./dist/wheels-windows
-  
-      - name: Download macOS wheels
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-macos
-          path: ./dist/wheels-macos
-  
-      - name: Download sdist
-        uses: actions/download-artifact@v4
-        with:
-          name: sdist
-          path: ./dist/sdist
-  
-      # Twine upload step
-      - name: Publish to PyPI
-        run: twine upload ./dist/wheels-linux/* ./dist/wheels-windows/* ./dist/wheels-macos/* ./dist/sdist/*
-        env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-
-
-  publish-to-github:
-    needs: [linux, windows, macos, sdist]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.ref }}
-  
-      - name: Download wheels
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v3
         with:
           name: wheels
-          path: ./dist/wheels
-  
-      - name: Download sdist
-        uses: actions/download-artifact@v4
+      - name: Publish to PyPI
+        uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
-          name: sdist
-          path: ./dist/sdist
-  
-      - name: Get version from your version file
-        id: version
-        # Update the working-directory and command to extract version from your project's version file
-        run: |
-          # Example for extracting version from a Python file
-          VERSION=$(python setup.py --version)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-  
-      - name: Create GitHub release
-        id: github-release
-        uses: release-drafter/release-drafter@v5
-        with:
-          # Update these details according to your project
-          name: PyPrevent ${{ steps.version.outputs.version }}
-          tag: v${{ steps.version.outputs.version }}
-          version: ${{ steps.version.outputs.version }}
-          commitish: ${{ github.sha }}
-          disable-autolabeler: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
-      - name: Upload assets to GitHub release
-        run: |
-          gh release upload $TAG ./dist/wheels/* ./dist/sdist/* --clobber
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ steps.github-release.outputs.tag_name }}
-  
-      - name: Publish GitHub release
-        run: gh release edit $TAG --draft=false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ steps.github-release.outputs.tag_name }}
+          command: upload
+          args: --non-interactive --skip-existing *
