--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,18 +24,17 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
-          sccache: 'true'
-          manylinux: auto
+      - name: Build wheels in Manylinux Docker Container
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/io ghcr.io/pyo3/maturin build --release --manifest-path /io/Cargo.toml -i python3.10 --out io/dist --manylinux off
+        env:
+          SCCACHE: 'true'
+
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
           name: wheels
-          path: dist
+          path: ./io/dist
 
   windows:
     runs-on: windows-latest
