--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   linux:
-    name: Build nightly only
+    name: Build Linux
     runs-on: ubuntu-latest
     container: quay.io/pypa/manylinux2014_x86_64
     steps:
@@ -31,7 +31,7 @@ jobs:
           for PYBIN in /opt/python/cp3[6789]*/bin; do
              
             "${PYBIN}/pip" install maturin
-            "${PYBIN}/maturin" build -m Cargo.toml -i "${PYBIN}/python" --release --manylinux 2014 --out dist
+            "${PYBIN}/maturin" build -m Cargo.toml -i "${PYBIN}/python" --release --manylinux 2014 --out tmp/dist
           done
       # Auditwheel isn't generally necessary. This is only shown as refernce for cases where you link
       # external libraries, in which case you have to set manylinux to off and then use auditwheel repair
@@ -44,7 +44,7 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: linux-wheels
-          path: ./dist
+          path: ./tmp/dist
 
   windows:
     runs-on: windows-latest
