--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,17 @@ build-backend = "maturin"
 
 [project]
 name = "pyprevent"
-version = "0.1.0"
+version = "0.1.1"
 authors = [{name = "Lars Hegstrom, MD", email = "lhegstrom@nference.net"}]
+description = "Python implementation of 2024 AHA PREVENT calculator"
+readme = "README.md"
+license = "License-Identifier"  # Specify your license
+repository = "https://github.com/lhegstrom/PyPrevent/"
+documentation = "Your-Documentation-URL"  # If available
+
+[project.urls]
+Source = "https://github.com/lhegstrom/PyPrevent/"
+Tracker = "https://github.com/lhegstrom/PyPrevent/issues"
 
 [tool.maturin]
 module-name = "pyprevent._pyprevent"
