--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "maturin"
 
 [project]
 name = "pyprevent"
-version = "0.1.1"
+version = "0.1.2"
 authors = [{email = "lhegstrom@nference.net"}]
 description = "Python implementation of 2024 AHA PREVENT calculator"
 readme = "README.md"
-license = "License-Identifier"  # Specify your license
+license = {file = "LICENSE.txt"}
 repository = "https://github.com/lhegstrom/PyPrevent/"
 
 [project.urls]
