--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "rust_aha_formulas"               # Your package name
-version = "0.1.0"            # The current version of your package
+name = "pyprevent"               # Your package name
+version = "0.1.2"            # The current version of your package
 edition = "2021"             # The Rust edition to use
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.pyo3]
-version = "0.20.1"
+version = "0.20.2"
 features = ["extension-module"]
 
 [dependencies]
