--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, windows-2022, windows-2019]
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        os: [windows-latest] #, windows-2022, windows-2019]
+        python-version: ['3.7'] # , '3.8', '3.9', '3.10', '3.11', '3.12']
     steps:
     - uses: actions/checkout@v2
       name: Checkout repo
@@ -19,6 +19,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         architecture: x64
+
+    - name: Change to project directory
+      run: cd PyPREVENT; ls -a
 
     - name: Install dependencies
       run: |
