--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -23,9 +23,9 @@ jobs:
     - name: Change to project directory
       run: cd PyPREVENT
 
-    - name: Install dependencies
+    - name: Upgrade pip and Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip || echo "Pip upgrade failed. Continuing with package installation."
         pip install -r requirements.txt
 
     - name: Build the wheels
