--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -24,9 +24,7 @@ jobs:
       run: cd PyPREVENT
 
     - name: Upgrade pip and Install dependencies
-      run: |
-        python -m pip install --upgrade pip || echo "Pip upgrade failed. Continuing with package installation."
-        pip install -r requirements.txt
+      run: pip install -r requirements.txt
 
     - name: Build the wheels
       run: maturin build --release --strip --out dist
