--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -23,15 +23,13 @@ jobs:
     - name: Change to project directory
       run: cd PyPREVENT
 
-    - name: Create and activate a virtual environment
-      run: |
-        python -m venv venv
-        source venv/Scripts/activate
-
     - name: Install dependencies
       run: |
+        python -m venv venv
+        .\venv\Scripts\Activate
         pip install --upgrade pip
         pip install -r requirements.txt
+      shell: powershell
 
     - name: Build the wheels
       run: maturin build --release --strip --out dist
