--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest] #, windows-2022, windows-2019]
-        python-version: ['3.10'] # , '3.8', '3.9', '3.10', '3.11', '3.12']
+        os: [windows-latest, windows-2022, windows-2019]
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
     steps:
     - uses: actions/checkout@v2
       name: Checkout repo
@@ -45,14 +45,16 @@ jobs:
         maturin build --release --strip --out dist
       shell: powershell
 
+
     - name: Publish to PyPI
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         .\venv\Scripts\Activate
-        twine upload dist/*
+        twine upload dist/* || if ($LASTEXITCODE -eq 1) { $error_message = Get-Content $env:TWINE_OUTPUT -Raw; if ($error_message -match "File already exists") { Write-Host "Package version already uploaded. Ignoring error."; exit 0 } else { exit $LASTEXITCODE } }
       shell: powershell
+
 
 
       
