--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, windows-2022, windows-2019]
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12'] # , '3.7', '3.8', '3.9']
     steps:
     - uses: actions/checkout@v2
       name: Checkout repo
