--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -80,8 +80,8 @@ jobs:
       run: |
         docker run -d --name manylinux -v /home/runner/work/PyPREVENT/PyPREVENT/PyPrevent:/PyPrevent quay.io/pypa/manylinux2014_x86_64 tail -f /dev/null
 
-    - name: Install Rust
-      run: docker exec manylinux bash -c "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
+    - name: Install Rust and set up the environment
+      run: docker exec manylinux bash -c "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env"
 
     - name: Build Package
       run: |
